// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`check circle Кружок без буквы, head, tail, index и в состоянии Default рендерится без ошибок 1`] = `
<div
  className="content "
  data-testid="circle"
>
  <div
    className="text text_type_input text_color_input mb-4 absolute head element"
  />
  <div
    className="circle   default"
    data-testid="circle-state"
  >
    <p
      className="text text_type_circle text_color_input letter"
      data-testid="letter"
    />
  </div>
  <p
    className="text text_type_input text_color_input mt-4 absolute index"
  />
  <div
    className="text text_type_input text_color_input mt-4 absolute tail30 element"
  />
</div>
`;

exports[`check circle Кружок с буквами, head, tail, index и в состоянии Changing рендерится без ошибок 1`] = `
<div
  className="content "
  data-testid="circle"
>
  <div
    className="text text_type_input text_color_input mb-4 absolute head string"
  >
    head
  </div>
  <div
    className="circle   changing"
    data-testid="circle-state"
  >
    <p
      className="text text_type_circle text_color_input letter"
      data-testid="letter"
    >
      strg
    </p>
  </div>
  <p
    className="text text_type_input text_color_input mt-4 absolute index"
  >
    0
  </p>
  <div
    className="text text_type_input text_color_input mt-4 absolute tail60 string"
  >
    tail
  </div>
</div>
`;

exports[`check circle Кружок с буквами, с react-элементом в head, tail и в состоянии Modified рендерится без ошибок 1`] = `
<div
  className="content "
  data-testid="circle"
>
  <div
    className="text text_type_input text_color_input mb-4 absolute head element"
  >
    <div>
      srtg
    </div>
  </div>
  <div
    className="circle   modified"
    data-testid="circle-state"
  >
    <p
      className="text text_type_circle text_color_input letter"
      data-testid="letter"
    >
      strg
    </p>
  </div>
  <p
    className="text text_type_input text_color_input mt-4 absolute index"
  >
    0
  </p>
  <div
    className="text text_type_input text_color_input mt-4 absolute tail60 element"
  >
    <div>
      srtg
    </div>
  </div>
</div>
`;

exports[`check circle Кружок с буквами, с пропсом isSmall === true рендерится без ошибок 1`] = `
<div
  className="content "
  data-testid="circle"
>
  <div
    className="text text_type_input text_color_input mb-4 absolute head element"
  />
  <div
    className="circle  small default"
    data-testid="circle-state"
  >
    <p
      className="text text_type_circle text_color_input letter"
      data-testid="letter"
    >
      strg
    </p>
  </div>
  <p
    className="text text_type_input text_color_input mt-4 absolute index"
  />
  <div
    className="text text_type_input text_color_input mt-4 absolute tail30 element"
  />
</div>
`;
